[package]
name = "metamask-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7" }
bevy_egui = "0.13"
async-channel = "1.6.1"
web3 = { version = "0.18.0", features = [
  "wasm",
  "eip-1193",
], default-features = false }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["Window"]}
serde_json = "1.0.39"  # version bump? copied from rust-web3@main
futures = "0.3.21"

mbutils = { git = "https://github.com/stnbu/mbutil.git" }
